<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:padding="10dp"
            android:text="Insert New Person"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_insert_new_person_block_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:src="#AAA">


        <TextView
            android:id="@+id/name"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/activity_insert_new_person_name"
            android:textColor="@color/red_primary_dark" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_insert_new_person_block_age"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_insert_new_person_block_name"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/age"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/activity_insert_new_person_age"
            android:textColor="@color/red_primary_dark" />

        <EditText
            android:id="@+id/edit_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_insert_new_person_button_send"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_background"
        android:layout_below="@+id/activity_insert_new_person_block_age"
        android:text="@string/activity_insert_new_person_button" />


</LinearLayout>